:sparkles: Feature: Add 'append' and 'overwrite' options for schema inferring
